docs/2.0/_sources/tutorials/index.rst.txt
:orphan:

.. include:: ../references.txt

.. _tutorials:

=========
Tutorials
=========

.. important::

    * It is **strongly** advised to first read :ref:`package_structure` of the User Guide before using the
      tutorials.

    * In general, all methods and classes are defined with default values that permit a good execution per default.
      In the tutorials, we frequently use extra values to just illustrate their usage.

    * The Gammapy library is used by many instruments and as consequence can not describe the specificities of each
      data release of each observatory. Get in touch with the observatory experts to get the best usage of a given
      data release.

This page lists the Gammapy tutorials that are available as `Jupyter`_ notebooks.
You can read them here, or execute them using a temporary cloud server in Binder.

To execute them locally, you have to first install Gammapy locally (see
:ref:`installation`) and download the tutorial notebooks and example datasets (see
:ref:`getting-started`). Once Gammapy is installed, remember that you can always
use ``gammapy tutorial setup`` to check your tutorial setup, or in your script with

.. code-block:: python

    from gammapy.utils.check import check_tutorials_setup
    check_tutorials_setup()

Gammapy is a Python package built on `Numpy`_ and `Astropy`_, so to use it
effectively, you have to learn the basics. Many good free resources are
available, e.g. `A Whirlwind tour of Python`_, the `Python data science
handbook`_ and the `Astropy Hands-On Tutorial`_.



.. raw:: html

    <div class="sphx-glr-thumbnails">

.. thumbnail-parent-div-open

.. thumbnail-parent-div-close

.. raw:: html

    </div>

Introduction
============


The following three tutorials show different ways of how to use Gammapy to perform a complete data analysis,
from data selection to data reduction and finally modeling and fitting.

The first tutorial is an overview on how to perform a standard analysis workflow using the high level interface
in a configuration-driven approach, whilst the second deals with the same use-case using the low level API
and showing what is happening *under-the-hood*. The third tutorial shows a glimpse of how to handle different
basic data structures like event lists, source catalogs, sky maps, spectral models and flux points tables.



.. raw:: html

    <div class="sphx-glr-thumbnails">

.. thumbnail-parent-div-open

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Introduction to basic data structures handling.">

.. only:: html

  .. image:: /tutorials/starting/images/thumb/sphx_glr_overview_thumb.png
    :alt:

  :ref:`sphx_glr_tutorials_starting_overview.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Data structures</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Introduction to 3D analysis using the Gammapy high level interface.">

.. only:: html

  .. image:: /tutorials/starting/images/thumb/sphx_glr_analysis_1_thumb.png
    :alt:

  :ref:`sphx_glr_tutorials_starting_analysis_1.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">High level interface</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Introduction to Gammapy analysis using the low level API.">

.. only:: html

  .. image:: /tutorials/starting/images/thumb/sphx_glr_analysis_2_thumb.png
    :alt:

  :ref:`sphx_glr_tutorials_starting_analysis_2.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Low level API</div>
    </div>


.. thumbnail-parent-div-close

.. raw:: html

    </div>

Data exploration
================

These tutorials show how to perform data exploration with Gammapy, providing an introduction to H.E.S.S., MAGIC, VERITAS, CTAO, HAWC and Fermi-LAT data and their instrument response functions (IRFs). You will learn to explore and filter event lists according to different criteria, view multidimensional IRF files and perform instrument-specific analysis.



.. raw:: html

    <div class="sphx-glr-thumbnails">

.. thumbnail-parent-div-open

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Explore H.E.S.S. event lists and IRFs.">

.. only:: html

  .. image:: /tutorials/data/images/thumb/sphx_glr_hess_thumb.png
    :alt:

  :ref:`sphx_glr_tutorials_data_hess.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">H.E.S.S. with Gammapy</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Access and inspect CTAO data and instrument response functions (IRFs) using Gammapy.">

.. only:: html

  .. image:: /tutorials/data/images/thumb/sphx_glr_cta_thumb.png
    :alt:

  :ref:`sphx_glr_tutorials_data_cta.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">CTAO with Gammapy</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Explore the MAGIC IRFs and perform a point like spectral analysis with energy dependent offset cut.">

.. only:: html

  .. image:: /tutorials/data/images/thumb/sphx_glr_magic_thumb.png
    :alt:

  :ref:`sphx_glr_tutorials_data_magic.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">MAGIC with Gammapy</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Data inspection and preliminary analysis with Fermi-LAT data.">

.. only:: html

  .. image:: /tutorials/data/images/thumb/sphx_glr_fermi_lat_thumb.png
    :alt:

  :ref:`sphx_glr_tutorials_data_fermi_lat.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Fermi-LAT with Gammapy</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Explore HAWC event lists and instrument response functions (IRFs), then perform the data reduction steps.">

.. only:: html

  .. image:: /tutorials/data/images/thumb/sphx_glr_hawc_thumb.png
    :alt:

  :ref:`sphx_glr_tutorials_data_hawc.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">HAWC with Gammapy</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Explore VERITAS point-like DL3 files, including event lists and IRFs and calculate Li &amp; Ma significance, spectra, and fluxes.">

.. only:: html

  .. image:: /tutorials/data/images/thumb/sphx_glr_veritas_thumb.png
    :alt:

  :ref:`sphx_glr_tutorials_data_veritas.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">VERITAS with Gammapy</div>
    </div>


.. thumbnail-parent-div-close

.. raw:: html

    </div>

Model Gallery
=============

A gallery of all possible spectral, spatial and temporal models can be found in this page:
:ref:`model-gallery`.



.. raw:: html

    <div class="sphx-glr-thumbnails">

.. thumbnail-parent-div-open

.. thumbnail-parent-div-close

.. raw:: html

    </div>

Detailed explanation
====================

The following tutorials demonstrate different how to use Gammapy tools
across the full analysis chain, from data loading to model comparison.



.. raw:: html

    <div class="sphx-glr-thumbnails">

.. thumbnail-parent-div-open

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="gammapy.irf contains classes for handling Instrument Response Functions typically stored as multi-dimensional tables. Gammapy is currently supporting the functions defined in the GADF format (see https://gamma-astro-data-formats.readthedocs.io/en/v0.3/irfs/full_enclosure/index.html). The detailed list can be found in the IRF user guide &lt;/user-guide/irf/index&gt;.">

.. only:: html

  .. image:: /tutorials/details/images/thumb/sphx_glr_irfs_thumb.png
    :alt:

  :ref:`sphx_glr_tutorials_details_irfs.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Using Gammapy IRFs</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Clustering observations into specific groups.">

.. only:: html

  .. image:: /tutorials/details/images/thumb/sphx_glr_observation_clustering_thumb.png
    :alt:

  :ref:`sphx_glr_tutorials_details_observation_clustering.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Observational clustering</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This tutorial explains how to make such a plot, that is the distribution of event counts as a function of the squared angular distance, to a test position.">

.. only:: html

  .. image:: /tutorials/details/images/thumb/sphx_glr_theta_square_plot_thumb.png
    :alt:

  :ref:`sphx_glr_tutorials_details_theta_square_plot.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Make a theta-square plot</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Data reduction: from observations to binned datasets">

.. only:: html

  .. image:: /tutorials/details/images/thumb/sphx_glr_makers_thumb.png
    :alt:

  :ref:`sphx_glr_tutorials_details_makers.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Makers - Data reduction</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Learn how to work with datasets">

.. only:: html

  .. image:: /tutorials/details/images/thumb/sphx_glr_datasets_thumb.png
    :alt:

  :ref:`sphx_glr_tutorials_details_datasets.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Datasets - Reduced data, IRFs, models</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="A thorough tutorial to work with WCS maps.">

.. only:: html

  .. image:: /tutorials/details/images/thumb/sphx_glr_maps_thumb.png
    :alt:

  :ref:`sphx_glr_tutorials_details_maps.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Maps</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Create and apply masks maps.">

.. only:: html

  .. image:: /tutorials/details/images/thumb/sphx_glr_mask_maps_thumb.png
    :alt:

  :ref:`sphx_glr_tutorials_details_mask_maps.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Mask maps</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Access and explore thew most common gamma-ray source catalogs.">

.. only:: html

  .. image:: /tutorials/details/images/thumb/sphx_glr_catalog_thumb.png
    :alt:

  :ref:`sphx_glr_tutorials_details_catalog.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Source catalogs</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="The sub-package modeling contains all the functionality related to modeling and fitting data. This includes spectral, spatial and temporal model classes, as well as the fit and parameter API.The models follow a naming scheme which contains the category as a suffix to the class name. An overview of all the available models can be found in the model-gallery.">

.. only:: html

  .. image:: /tutorials/details/images/thumb/sphx_glr_models_thumb.png
    :alt:

  :ref:`sphx_glr_tutorials_details_models.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Models</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Learn how you can include prior knowledge into the fitting by setting priors on single parameters.">

.. only:: html

  .. image:: /tutorials/details/images/thumb/sphx_glr_priors_thumb.png
    :alt:

  :ref:`sphx_glr_tutorials_details_priors.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Priors</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Multiple datasets and models interaction in Gammapy.">

.. only:: html

  .. image:: /tutorials/details/images/thumb/sphx_glr_model_management_thumb.png
    :alt:

  :ref:`sphx_glr_tutorials_details_model_management.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Modelling</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Learn how the model, dataset and fit Gammapy classes work together in a detailed modeling and fitting use-case.">

.. only:: html

  .. image:: /tutorials/details/images/thumb/sphx_glr_fitting_thumb.png
    :alt:

  :ref:`sphx_glr_tutorials_details_fitting.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Fitting</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="A demonstration of a Bayesian analysis using the nested sampling technique.">

.. only:: html

  .. image:: /tutorials/details/images/thumb/sphx_glr_nested_sampling_Crab_thumb.png
    :alt:

  :ref:`sphx_glr_tutorials_details_nested_sampling_Crab.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Bayesian analysis with nested sampling</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This tutorial provides an overview of the Estimator API. All estimators live in the gammapy.estimators sub-module, offering a range of algorithms and classes for high-level flux and significance estimation. This is accomplished through a common functionality allowing the estimation of flux points, light curves, flux maps and profiles via a common API.">

.. only:: html

  .. image:: /tutorials/details/images/thumb/sphx_glr_estimators_thumb.png
    :alt:

  :ref:`sphx_glr_tutorials_details_estimators.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Estimators</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Explore how to deal with upper limits on parameters.">

.. only:: html

  .. image:: /tutorials/details/images/thumb/sphx_glr_parameter_ul_thumb.png
    :alt:

  :ref:`sphx_glr_tutorials_details_parameter_ul.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Constraining parameter limits</div>
    </div>


.. thumbnail-parent-div-close

.. raw:: html

    </div>

Data analysis
=============

The following set of tutorials are devoted to data analysis, and grouped according to the specific covered use
cases in spectral analysis and flux fitting, image and cube analysis modelling and fitting, as well as
time-dependent analysis with light-curves.

1D Spectral
-----------


.. raw:: html

    <div class="sphx-glr-thumbnails">

.. thumbnail-parent-div-open

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Estimate the CTAO sensitivity for a point-like IRF at a fixed zenith angle and fixed offset.">

.. only:: html

  .. image:: /tutorials/analysis-1d/images/thumb/sphx_glr_cta_sensitivity_thumb.png
    :alt:

  :ref:`sphx_glr_tutorials_analysis-1d_cta_sensitivity.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Point source sensitivity</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Perform a full region based on-off spectral analysis and fit the resulting datasets.">

.. only:: html

  .. image:: /tutorials/analysis-1d/images/thumb/sphx_glr_spectral_analysis_thumb.png
    :alt:

  :ref:`sphx_glr_tutorials_analysis-1d_spectral_analysis.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Spectral analysis</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Introduction to 1D analysis using the Gammapy high level interface.">

.. only:: html

  .. image:: /tutorials/analysis-1d/images/thumb/sphx_glr_spectral_analysis_hli_thumb.png
    :alt:

  :ref:`sphx_glr_tutorials_analysis-1d_spectral_analysis_hli.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Spectral analysis with the HLI</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Perform a spectral analysis of an extended source.">

.. only:: html

  .. image:: /tutorials/analysis-1d/images/thumb/sphx_glr_extended_source_spectral_analysis_thumb.png
    :alt:

  :ref:`sphx_glr_tutorials_analysis-1d_extended_source_spectral_analysis.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Spectral analysis of extended sources</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Simulate a number of spectral on-off observations of a source with a power-law spectral model using the CTA 1DC response and fit them with the assumed spectral model.">

.. only:: html

  .. image:: /tutorials/analysis-1d/images/thumb/sphx_glr_spectrum_simulation_thumb.png
    :alt:

  :ref:`sphx_glr_tutorials_analysis-1d_spectrum_simulation.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">1D spectrum simulation</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Fit spectral models to combined Fermi-LAT and IACT flux points tables.">

.. only:: html

  .. image:: /tutorials/analysis-1d/images/thumb/sphx_glr_sed_fitting_thumb.png
    :alt:

  :ref:`sphx_glr_tutorials_analysis-1d_sed_fitting.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Flux point fitting</div>
    </div>


.. thumbnail-parent-div-close

.. raw:: html

    </div>

2D Image
--------


.. raw:: html

    <div class="sphx-glr-thumbnails">

.. thumbnail-parent-div-open

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Build a list of significant excesses in a Fermi-LAT map.">

.. only:: html

  .. image:: /tutorials/analysis-2d/images/thumb/sphx_glr_detect_thumb.png
    :alt:

  :ref:`sphx_glr_tutorials_analysis-2d_detect.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Source detection and significance maps</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Create an excess (gamma-ray events) and a significance map extracting a ring background.">

.. only:: html

  .. image:: /tutorials/analysis-2d/images/thumb/sphx_glr_ring_background_thumb.png
    :alt:

  :ref:`sphx_glr_tutorials_analysis-2d_ring_background.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Ring background map</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Source modelling and fitting in stacked observations using the high level interface.">

.. only:: html

  .. image:: /tutorials/analysis-2d/images/thumb/sphx_glr_modeling_2D_thumb.png
    :alt:

  :ref:`sphx_glr_tutorials_analysis-2d_modeling_2D.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">2D map fitting</div>
    </div>


.. thumbnail-parent-div-close

.. raw:: html

    </div>

3D Cube
-------


.. raw:: html

    <div class="sphx-glr-thumbnails">

.. thumbnail-parent-div-open

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Perform detailed 3D stacked and joint analysis.">

.. only:: html

  .. image:: /tutorials/analysis-3d/images/thumb/sphx_glr_analysis_3d_thumb.png
    :alt:

  :ref:`sphx_glr_tutorials_analysis-3d_analysis_3d.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">3D detailed analysis</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Detect sources, produce a sky image and a spectrum using CTA-1DC data.">

.. only:: html

  .. image:: /tutorials/analysis-3d/images/thumb/sphx_glr_cta_data_analysis_thumb.png
    :alt:

  :ref:`sphx_glr_tutorials_analysis-3d_cta_data_analysis.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Basic image exploration and fitting</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Joint 3D analysis using 3D Fermi datasets, a H.E.S.S. reduced spectrum and HAWC flux points.">

.. only:: html

  .. image:: /tutorials/analysis-3d/images/thumb/sphx_glr_analysis_mwl_thumb.png
    :alt:

  :ref:`sphx_glr_tutorials_analysis-3d_analysis_mwl.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Multi instrument joint 3D and 1D analysis</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Simulate a 3D observation of a source with the CTA 1DC response and fit it with the assumed source model.">

.. only:: html

  .. image:: /tutorials/analysis-3d/images/thumb/sphx_glr_simulate_3d_thumb.png
    :alt:

  :ref:`sphx_glr_tutorials_analysis-3d_simulate_3d.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">3D map simulation</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Learn to sampling events from a given sky model and IRFs.">

.. only:: html

  .. image:: /tutorials/analysis-3d/images/thumb/sphx_glr_event_sampling_thumb.png
    :alt:

  :ref:`sphx_glr_tutorials_analysis-3d_event_sampling.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Event sampling</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This notebook shows how to sample events of sources whose model evolves in energy and time.">

.. only:: html

  .. image:: /tutorials/analysis-3d/images/thumb/sphx_glr_event_sampling_nrg_depend_models_thumb.png
    :alt:

  :ref:`sphx_glr_tutorials_analysis-3d_event_sampling_nrg_depend_models.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Sample a source with energy-dependent temporal evolution</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Learn how to estimate flux profiles on a Fermi-LAT dataset.">

.. only:: html

  .. image:: /tutorials/analysis-3d/images/thumb/sphx_glr_flux_profiles_thumb.png
    :alt:

  :ref:`sphx_glr_tutorials_analysis-3d_flux_profiles.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Flux Profile Estimation</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Explore how to compute flux upper limits for a non-detected source.">

.. only:: html

  .. image:: /tutorials/analysis-3d/images/thumb/sphx_glr_non_detected_source_thumb.png
    :alt:

  :ref:`sphx_glr_tutorials_analysis-3d_non_detected_source.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Computing flux upper limits</div>
    </div>


.. thumbnail-parent-div-close

.. raw:: html

    </div>

Time series
-----------



.. raw:: html

    <div class="sphx-glr-thumbnails">

.. thumbnail-parent-div-open

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Compute per-observation and nightly fluxes of four Crab nebula observations.">

.. only:: html

  .. image:: /tutorials/analysis-time/images/thumb/sphx_glr_light_curve_thumb.png
    :alt:

  :ref:`sphx_glr_tutorials_analysis-time_light_curve.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Light curves</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Compute the light curve of a PKS 2155-304 flare on 10 minutes time intervals.">

.. only:: html

  .. image:: /tutorials/analysis-time/images/thumb/sphx_glr_light_curve_flare_thumb.png
    :alt:

  :ref:`sphx_glr_tutorials_analysis-time_light_curve_flare.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Light curves for flares</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Compute a series of time variability significance estimators for a lightcurve.">

.. only:: html

  .. image:: /tutorials/analysis-time/images/thumb/sphx_glr_variability_estimation_thumb.png
    :alt:

  :ref:`sphx_glr_tutorials_analysis-time_variability_estimation.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Estimation of time variability in a lightcurve</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Perform spectral fits of a blazar in different time bins to investigate spectral changes during flares.">

.. only:: html

  .. image:: /tutorials/analysis-time/images/thumb/sphx_glr_time_resolved_spectroscopy_thumb.png
    :alt:

  :ref:`sphx_glr_tutorials_analysis-time_time_resolved_spectroscopy.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Time resolved spectroscopy estimator</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Simulate and fit a time decaying light curve of a source using the CTA 1DC response.">

.. only:: html

  .. image:: /tutorials/analysis-time/images/thumb/sphx_glr_light_curve_simulation_thumb.png
    :alt:

  :ref:`sphx_glr_tutorials_analysis-time_light_curve_simulation.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Simulating and fitting a time varying source</div>
    </div>


.. thumbnail-parent-div-close

.. raw:: html

    </div>

Astrophysics use cases
======================

This section outlines some source specific use cases.



.. raw:: html

    <div class="sphx-glr-thumbnails">

.. thumbnail-parent-div-open

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Gamma rays emitted from extra-galactic objects, eg blazars, interact with the photons of the Extragalactic Background Light (EBL) through pair production and are attenuated, thus modifying the intrinsic spectrum.">

.. only:: html

  .. image:: /tutorials/astrophysics/images/thumb/sphx_glr_ebl_thumb.png
    :alt:

  :ref:`sphx_glr_tutorials_astrophysics_ebl.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Account for spectral absorption due to the EBL</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Learn how to test for energy-dependent morphology in your dataset.">

.. only:: html

  .. image:: /tutorials/astrophysics/images/thumb/sphx_glr_energy_dependent_estimation_thumb.png
    :alt:

  :ref:`sphx_glr_tutorials_astrophysics_energy_dependent_estimation.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Morphological energy dependence estimation</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Produce a phasogram, phased-resolved maps and spectra for pulsar analysis.">

.. only:: html

  .. image:: /tutorials/astrophysics/images/thumb/sphx_glr_pulsar_analysis_thumb.png
    :alt:

  :ref:`sphx_glr_tutorials_astrophysics_pulsar_analysis.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Pulsar analysis</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Convenience methods for dark matter high level analyses.">

.. only:: html

  .. image:: /tutorials/astrophysics/images/thumb/sphx_glr_astro_dark_matter_thumb.png
    :alt:

  :ref:`sphx_glr_tutorials_astrophysics_astro_dark_matter.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Dark matter spatial and spectral models</div>
    </div>


.. thumbnail-parent-div-close

.. raw:: html

    </div>


Scripts
=======

For interactive use, IPython and Jupyter are great, and most Gammapy examples use those.
However, for long-running, non-interactive tasks like data reduction or survey maps,
you might prefer a Python script.

The following example shows how to run Gammapy within a Python script.


.. raw:: html

    <div class="sphx-glr-thumbnails">

.. thumbnail-parent-div-open

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Make a survey counts map using a script.">

.. only:: html

  .. image:: /tutorials/scripts/images/thumb/sphx_glr_survey_map_thumb.png
    :alt:

  :ref:`sphx_glr_tutorials_scripts_survey_map.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Survey Map Script</div>
    </div>


.. thumbnail-parent-div-close

.. raw:: html

    </div>


.. toctree::
   :hidden:
   :includehidden:


   /tutorials/starting/index.rst
   /tutorials/data/index.rst
   /tutorials/model-gallery/index.rst
   /tutorials/details/index.rst
   /tutorials/analysis-1d/index.rst
   /tutorials/analysis-2d/index.rst
   /tutorials/analysis-3d/index.rst
   /tutorials/analysis-time/index.rst
   /tutorials/astrophysics/index.rst
   /tutorials/scripts/index.rst


.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-gallery

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download all examples in Python source code: tutorials_python.zip </tutorials/tutorials_python.zip>`

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download all examples in Jupyter notebooks: tutorials_jupyter.zip </tutorials/tutorials_jupyter.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
